# prime

./: .gitignore  CLAUDE.md  README.md  gmail_search.py  inbox.md  pyproject.toml
.claude/agents/: loremaster.md
.claude/commands/: gmail.md
affairs/: column.md  food-map.md  health.md  meals.md  prime.md  royal-family.md  taxes.md
affairs/glass/: affair.md
affairs/loom/: affair.md  design.md
lore/: activity-sourcing.md  activitystreams-vocabulary.md  bonsai-integration.md  bun-bundler.md  claude-code-cli-automation.md  costplusdrugs-automation.md  dspy-fastapi-streaming.md  dspy-framework.md  eleventy-static-sites.md  firestore-activitypub-store.md  glass-imaging.md  google-gmail-calendar-integration.md  json-ld-primer.md  lit-web-components.md  streaming-markdown.md  vibium-browser-automation.md  web-awesome-components.md
memory/: preferences.md
